# NativeTavern

./: .gitignore  .metadata  PRIVACY_POLICY.md  README.md  README.zh-CN.md  analysis_options.yaml  build_ios.sh  l10n.yaml  pubspec.yaml
.github/workflows/: release.yml
assets/characters/: README.md  cultivation_survival_game.json  hyrule_adventure_quest.json  marvel_crisis_manager.json
assets/world_info/: README.md  marvel_universe.json  mortal_cultivation.json  zelda_legend.json
lib/: app.dart  main.dart
lib/core/services/: initialization_service.dart
lib/data/database/: database.dart  database.g.dart
lib/data/models/: ai_preset.dart  app_theme_config.dart  bookmark.dart  cfg_scale.dart  character.dart  chat.dart  chat_background.dart  chat_statistics.dart  group.dart  instruct_template.dart  instruct_template.g.dart  (+22 more)
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hi.arb  app_id.arb  app_it.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_hi.dart  app_localizations_id.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_pt.dart  app_localizations_th.dart  app_ms.arb  app_nl.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_th.arb  app_tr.arb  app_vi.arb  app_zh.arb  app_zh_TW.arb
plans/: Extension-Compatibility-Analysis.md  NativeTavern-Feature-Analysis.md  flutter-hot-update-analysis.md
rust/: Cargo.toml
rust/src/: charx_parser.rs  error.rs  lib.rs  models.rs  png_parser.rs
(+102 files in other folders)
